# textmode

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
examples/: async.rs  basic.rs  input.rs  tmux.rs
examples/tmux_impl/: mod.rs
src/: async.rs  blocking.rs  color.rs  error.rs  input.rs  key.rs  lib.rs  output.rs  private.rs  raw_guard.rs  sync.rs
src/blocking/: input.rs  mod.rs  output.rs
tests/: basic.rs  input.rs
tests/fixtures/: mod.rs
