[package]
name = "textmode"
version = "0.3.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "terminal interaction library backed by a real terminal parser"
repository = "https://git.tozt.net/textmode"
readme = "README.md"
keywords = ["curses", "vt100", "terminal", "tui"]
categories = ["asynchronous", "command-line-interface"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
itoa = "1.0.1"
nix = "0.23.1"
terminal_size = "0.1.17"
vt100 = "0.15.1"

tokio = { version = "1.17.0", features = ["io-std", "io-util", "rt", "rt-multi-thread"], optional = true }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
assert_cmd = "2.0.4"
assert_fs = "1.0.7"
bytes = "1.1.0"
escargot = "0.5.7"
futures = "0.3.21"
libc = "0.2.119"
pty-process = { version = "0.2.0", features = ["async"] }
tokio = { version = "1.17.0", features = ["full"] }
tokio-util = { version = "0.7.0", features = ["io"] }

[patch.crates-io]
nix = { git = "https://github.com/nix-rust/nix" }
pty-process = { git = "https://github.com/doy/pty-process" }
