[package]
name = "textmode"
version = "0.4.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "terminal interaction library backed by a real terminal parser"
repository = "https://git.tozt.net/textmode"
readme = "README.md"
keywords = ["curses", "vt100", "terminal", "tui"]
categories = ["asynchronous", "command-line-interface"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
itoa = "1.0.6"
nix = "0.26.2"
terminal_size = "0.2.5"
vt100 = "0.15.2"

tokio = { version = "1.26.0", features = ["io-std", "io-util", "rt", "rt-multi-thread"], optional = true }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
assert_cmd = "2.0.8"
assert_fs = "1.0.10"
bytes = "1.4.0"
escargot = "0.5.7"
futures = "0.3.26"
libc = "0.2.139"
pty-process = { version = "0.3.0", features = ["async"] }
tokio = { version = "1.26.0", features = ["full"] }
tokio-util = { version = "0.7.7", features = ["io"] }
