[package]
name = "textmode"
version = "0.4.0"
authors = ["Jesse Luehrs <doy@tozt.net>"]
edition = "2021"

description = "terminal interaction library backed by a real terminal parser"
repository = "https://git.tozt.net/textmode"
readme = "README.md"
keywords = ["curses", "vt100", "terminal", "tui"]
categories = ["asynchronous", "command-line-interface"]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md", "CHANGELOG.md"]

[dependencies]
itoa = "1.0.14"
terminal_size = "0.4.1"
vt100 = "0.15.2"

tokio = { version = "1.43.0", features = ["io-std", "io-util", "rt", "rt-multi-thread"], optional = true }
rustix = { version = "0.38.44", features = ["termios"] }

[features]
default = []
async = ["tokio"]

[dev-dependencies]
assert_cmd = "2.0.16"
assert_fs = "1.1.2"
bytes = "1.9.0"
escargot = "0.5.13"
futures = "0.3.31"
libc = "0.2.169"
nix = { version = "0.29.0", features = ["poll", "term"] }
pty-process = { version = "0.4.0", features = ["async"] }
tokio = { version = "1.43.0", features = ["full"] }
tokio-util = { version = "0.7.13", features = ["io"] }
